--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,7 +2,7 @@ name: Ubuntu
 on: push
 jobs:
   Ubuntu:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
     - name: Setup Debug Session
       uses: csexton/debugger-action@master
